# agentic-metric

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README-CN.md  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/agentic_metric/: __init__.py  cli.py  config.py  formatting.py  models.py  pricing.py
src/agentic_metric/collectors/: __init__.py  _process.py  claude_code.py  codex.py  cursor.py  opencode.py  qwen_code.py
src/agentic_metric/store/: aggregator.py  database.py
src/agentic_metric/tui/: app.py  styles.tcss  widgets.py
tests/: test_collectors.py  test_pricing.py  test_store.py
